# openpx

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  justfile  release-please-config.json
.claude/: Claude.md  references.md
.githooks/: commit-msg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
bench-results/: REPORT.md
dashboard/: Cargo.toml
dashboard/src/: api.rs  main.rs  state.rs
dashboard/static/: app.js  index.html  styles.css
docs/: README.md  astro.config.mjs  book.toml  changelog.mdx  docs.json  generate-llms.sh  index.mdx  introduction.mdx  lang-toggle.js  llms.txt  openpx.asyncapi.json  openpx.asyncapi.yaml  openpx.openapi.yaml  package-lock.json  package.json  quickstart.mdx  sidebar-tags.js  style.css
e2e_orderbooks/: README.md
e2e_tests/: Cargo.toml  README.md
e2e_tests/live/rust/: test_live.rs
e2e_tests/orderbooks/: README.md
e2e_tests/orderbooks/cli/: run.sh
e2e_tests/orderbooks/python/: test_orderbooks.py
e2e_tests/orderbooks/typescript/: test_orderbooks.mjs
e2e_tests/src/: lib.rs
e2e_tests/trading/: README.md
e2e_tests/trading/cli/: run.sh
e2e_tests/trading/docs/: validate.py
e2e_tests/trading/python/: test_trading.py
e2e_tests/trading/typescript/: test_trading.mjs
e2e_tests/websockets/: README.md
e2e_tests/websockets/cli/: run.sh
e2e_tests/websockets/python/: test_websockets.py
e2e_tests/websockets/rust/: test_websockets.rs
e2e_tests/websockets/typescript/: test_websockets.mjs
e2e_trading/: README.md
engine/bench/: Cargo.toml  README.md
engine/bench/benches/: json_parse_480k.rs  orderbook_1000.rs  ws_hot_path.rs
engine/bench/fixtures/: simplified_markets_480k.json
engine/bench/scripts/: py_clob_bench.py  ws_baseline_py.py
engine/bench/src/: lib.rs
engine/cli/: Cargo.toml
engine/cli/src/: main.rs
engine/core/: Cargo.toml  README.md
engine/core/benches/: normalizers.rs  orderbook.rs  price_utils.rs  ws_decode.rs
engine/core/src/: buffer_pool.rs  error.rs  events.rs  hash.rs  http.rs  lib.rs  price_fixed.rs  test_support.rs  timing.rs  ws_decoder.rs
engine/core/src/exchange/: config.rs  fetcher.rs  manifest.rs  mod.rs  normalizers.rs  rate_limit.rs  traits.rs
engine/core/src/exchange/manifests/: kalshi.rs  mod.rs  opinion.rs  polymarket.rs  predictfun.rs
engine/core/src/models/: crypto.rs  event.rs  lineage.rs  market.rs  mod.rs  order.rs  orderbook.rs  orderbook_insights.rs  position.rs  raw_market.rs  series.rs  sport.rs  tag.rs  trade.rs
engine/core/src/models/sports/: game.rs  game_state.rs  mod.rs  sport.rs
engine/core/src/utils/: mod.rs  price.rs  series.rs
engine/core/src/websocket/: events.rs  mod.rs  ndjson.rs  stream.rs  traits.rs
engine/crypto/: Cargo.toml  README.md
engine/crypto/src/: lib.rs
engine/exchanges/kalshi/: Cargo.toml  README.md
engine/exchanges/kalshi/examples/: fetch_markets.rs
engine/exchanges/kalshi/src/: config.rs  error.rs  exchange.rs  fetcher.rs  normalize.rs  websocket.rs
engine/exchanges/kalshi/tests/: exchange_tests.rs  mapping_contract.rs
engine/exchanges/kalshi/tests/fixtures/: market.json
engine/exchanges/limitless/: Cargo.toml
engine/exchanges/limitless/src/: clob.rs  config.rs  exchange.rs  websocket.rs
engine/exchanges/limitless/tests/: exchange_tests.rs
engine/exchanges/opinion/: Cargo.toml  README.md
engine/exchanges/opinion/examples/: fetch_markets.rs
engine/exchanges/opinion/src/: config.rs  exchange.rs  lib.rs  websocket.rs
engine/exchanges/opinion/tests/: exchange_tests.rs
engine/exchanges/polymarket/: Cargo.toml  README.md
engine/exchanges/polymarket/examples/: check_credentials.rs  derive_credentials.rs  derive_credentials_with_cookie.rs
engine/exchanges/polymarket/src/: approvals.rs  auth.rs  client.rs  clob.rs  config.rs  ctf.rs  diagnostics.rs  error.rs  exchange.rs  fetcher.rs  lib.rs  relayer.rs  signer.rs  sports.rs  sports_ws.rs  swap.rs  websocket.rs
engine/exchanges/polymarket/tests/: exchange_tests.rs  mapping_contract.rs
engine/exchanges/polymarket/tests/fixtures/: market.json
engine/exchanges/predictfun/: Cargo.toml  README.md
engine/exchanges/predictfun/src/: config.rs  error.rs  exchange.rs  websocket.rs
engine/exchanges/predictfun/tests/: exchange_tests.rs
engine/recorder/: Cargo.toml
engine/recorder/src/: main.rs
engine/schema/: Cargo.toml
engine/schema/src/: main.rs
engine/sdk/: Cargo.toml  README.md
engine/sdk/src/: config.rs  lib.rs  websocket.rs  ws.rs
engine/sdk/tests/: e2e_markets.rs  e2e_orderbooks.rs  e2e_trading.rs  integration.rs  live.rs  wiring.rs
engine/sports/: Cargo.toml  README.md
engine/sports/src/: bridge.rs  lib.rs  manifest.rs  provider.rs  sports.rs  types.rs
engine/sports/src/espn/: mod.rs  scoreboard.rs  state_stream.rs
engine/sports/src/manifests/: mod.rs  polymarket.rs
maintenance/: README.md
px-core/: Cargo.toml  README.md
px-python/: Cargo.toml  pyproject.toml
px-python/python/openpx/: __init__.py  exchange.py
px-python/src/: error.rs  exchange.rs  lib.rs  stream.rs
px-sdk/: Cargo.toml
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/benches/: sdk_roundtrip.py
sdks/python/python/openpx/: __init__.py  _models.py  crypto.py  exchange.py  sports.py  sports_research.py  websocket.py
sdks/python/src/: crypto.rs  events.rs  exchange.rs  lib.rs  sports.rs  sports_research.rs  stream.rs  websocket.rs
sdks/typescript/: Cargo.toml  README.md  index.js  package.json
sdks/typescript/benches/: sdk_roundtrip.mjs
sdks/typescript/npm/darwin-arm64/: README.md  package.json
sdks/typescript/npm/darwin-x64/: README.md  package.json
sdks/typescript/npm/linux-arm64-gnu/: README.md  package.json
sdks/typescript/npm/linux-x64-gnu/: README.md  package.json
sdks/typescript/npm/win32-x64-msvc/: README.md  package.json
sdks/typescript/src/: crypto.rs  exchange.rs  lib.rs  sports.rs  sports_research.rs  stream.rs  websocket.rs
sdks/typescript/types/: models.d.ts
(+413 files in other folders)
