[workspace]
resolver = "2"
members = [
    "engine/core",
    "engine/exchanges/polymarket",
    "engine/exchanges/opinion",
    "engine/exchanges/kalshi",
    "engine/sports",
    "engine/crypto",
    "engine/schema",
    "engine/sdk",
    "engine/cli",
    "engine/recorder",
    "sdks/python",
    "sdks/typescript",
]
default-members = [
    "engine/core",
    "engine/exchanges/polymarket",
    "engine/exchanges/opinion",
    "engine/exchanges/kalshi",
    "engine/sports",
    "engine/crypto",
    "engine/schema",
    "engine/sdk",
    "engine/cli",
    "engine/recorder",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/openpx/openpx"
authors = ["Milind Pathiyal"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
async-trait = "0.1"
futures = "0.3"
async-channel = "2"

# HTTP & WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "http2"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rust_socketio = { version = "0.6", features = ["async"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SIMD JSON parser — consumers enable behind a per-crate feature; used in the
# WebSocket hot path where bytes are already owned and mutable.
simd-json = "0.13"

# Error handling
thiserror = "2"

# Ethereum
ethers = { version = "2", default-features = false, features = ["ws", "rustls"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Logging
tracing = "0.1"

# Metrics
metrics = "0.24"

# Stack-allocated small vectors
smallvec = { version = "1", features = ["serde"] }

# Byte buffers
bytes = "1"

# Faster non-cryptographic hash map. SipHash (stdlib default) is ~3-5x slower
# than ahash for short string keys, which dominate our WS state maps.
ahash = "0.8"

# Allocator
tikv-jemallocator = "0.6"

# Cryptography
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
px-core = { version = "0.2.1", path = "engine/core" }
px-exchange-polymarket = { version = "0.2.1", path = "engine/exchanges/polymarket" }
px-exchange-opinion = { version = "0.2.1", path = "engine/exchanges/opinion" }
px-exchange-kalshi = { version = "0.2.1", path = "engine/exchanges/kalshi" }
px-sports = { version = "0.2.1", path = "engine/sports" }
px-crypto = { version = "0.2.1", path = "engine/crypto" }
openpx = { version = "0.2.1", path = "engine/sdk" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
