[package]
name = "px-dashboard"
description = "OpenPX Trading Terminal Dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
px-sdk = { workspace = true }
px-core = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
dotenvy = "0.15"
