[package]
name = "px-bench"
description = "Internal benchmark harness comparing openpx against official exchange client libraries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# polymarket-rs-client 0.1 has a pkcs8 version conflict with our kalshi
# crate's alloy pin, so it lives in a separate out-of-workspace crate at
# engine/bench/external/polymarket_rs_bench/ and is subprocess-invoked by
# the network bench. py-clob-client is subprocess-invoked via Python.
# No third-party Rust clients are pulled into this workspace.

[dependencies]
px-core = { workspace = true, features = ["simd-json"] }
px-exchange-polymarket = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
simd-json = "0.13"

[[bench]]
name = "ws_hot_path"
harness = false

[[bench]]
name = "json_parse_480k"
harness = false

[[bench]]
name = "orderbook_1000"
harness = false

[[bin]]
name = "openpx-bench-network"
path = "src/bin/network_bench.rs"
