[package]
name = "px-cli"
description = "CLI tool for testing OpenPX exchange APIs and WebSocket streams"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "openpx"
path = "src/main.rs"

# Autoresearch latency harnesses — exercise the real Exchange trait + WS path
# end-to-end, capture p50/p99 via hdrhistogram, emit JSON for oracle.py.
[[bin]]
name = "rest_bench"
path = "src/bin/rest_bench.rs"

[[bin]]
name = "ws_soak"
path = "src/bin/ws_soak.rs"

[dependencies]
px-core = { workspace = true }
openpx = { workspace = true }
px-sports = { workspace = true }
px-crypto = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
dotenvy = "0.15"
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
hdrhistogram = "7"
