[package]
name = "px-core"
description = "Core traits, models, and errors for OpenPX prediction market SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["prediction-market", "trading", "sdk", "exchange"]
categories = ["api-bindings", "finance"]

[features]
default = []
schema = ["dep:schemars"]
simd-json = ["dep:simd-json"]
# Shared reqwest ClientBuilder tunings used by every exchange HTTP client.
# Exchanges enable this feature; px-schema and other non-HTTP consumers
# stay lightweight.
http = ["dep:reqwest"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
simd-json = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
schemars = { version = "0.8", features = ["chrono", "smallvec"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orderbook"
harness = false

[[bench]]
name = "normalizers"
harness = false

[[bench]]
name = "price_utils"
harness = false
