[package]
name = "px-core"
description = "Core traits, models, and errors for OpenPX prediction market SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["prediction-market", "trading", "sdk", "exchange"]
categories = ["api-bindings", "finance"]

[lib]
# `cargo bench` otherwise launches the lib's unit-test binary (libtest) with
# `--output-format bencher`, which libtest doesn't understand. The lib has
# no `#[bench]` functions, so disabling is purely additive.
bench = false

[features]
default = []
schema = ["dep:schemars"]
simd-json = ["dep:simd-json"]
# Shared reqwest ClientBuilder tunings used by every exchange HTTP client.
# Exchanges enable this feature; px-schema and other non-HTTP consumers
# stay lightweight.
http = ["dep:reqwest"]
# Shared mapping-contract test harness used by every exchange's
# `tests/mapping_contract.rs`. Enabled via dev-dependencies only.
test-support = ["dep:serde_yaml"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
flume = "0.11"
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
simd-json = { version = "0.17", optional = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
schemars = { version = "0.8", features = ["chrono", "smallvec"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }
syn = { version = "2", features = ["full", "visit"] }

[[bench]]
name = "orderbook"
harness = false

[[bench]]
name = "normalizers"
harness = false

[[bench]]
name = "price_utils"
harness = false

[[bench]]
name = "ws_decode"
harness = false
# Bench targets the SIMD crossover behaviour. Always-on simd-json keeps the
# numbers comparable across runs (the autoresearch oracle pins this on).
required-features = ["simd-json"]
