[package]
name = "px-crypto"
description = "Real-time crypto price streaming via WebSocket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
px-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
