[package]
name = "px-sdk"
description = "Unified SDK facade for all OpenPX exchanges"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
px-core = { workspace = true }
px-exchange-kalshi = { workspace = true }
px-exchange-polymarket = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
