[package]
name = "openpx"
description = "Unified SDK for prediction markets — Kalshi, Polymarket, and more"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["prediction-market", "trading", "polymarket", "kalshi", "sdk"]
categories = ["api-bindings", "finance"]

[dependencies]
px-core = { workspace = true }
px-exchange-kalshi = { workspace = true }
px-exchange-polymarket = { workspace = true }
px-sports = { workspace = true }
px-crypto = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
dotenvy = "0.15"
