[package]
name = "px-sports"
description = "Real-time sports score streaming via Polymarket Sports WebSocket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["sports", "websocket", "live-scores", "prediction-market"]
categories = ["api-bindings"]

[features]
default = []
schema = ["dep:schemars", "px-core/schema"]

[dependencies]
px-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { version = "0.8", features = ["chrono", "smallvec"], optional = true }
