[package]
name = "px-python"
description = "Python bindings for OpenPX prediction market SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
px-core = { workspace = true }
openpx = { workspace = true }
px-sports = { workspace = true }
px-crypto = { workspace = true }
pyo3 = { version = "0.28", features = ["extension-module"] }
pythonize = "0.28"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
