[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "openpx"
version = "0.2.5"
description = "Python SDK for OpenPX prediction markets"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Milind Pathiyal" }]
readme = "README.md"
keywords = ["prediction-market", "trading", "polymarket", "kalshi", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/openpx/openpx"
Repository = "https://github.com/openpx/openpx"

[project.optional-dependencies]
dev = ["datamodel-code-generator>=0.25", "maturin>=1.5,<2.0"]

[tool.maturin]
python-source = "python"
module-name = "openpx._native"
features = ["pyo3/extension-module"]
