[package]
name = "px-node"
description = "Node.js bindings for OpenPX prediction market SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
px-core = { workspace = true }
px-sdk = { workspace = true }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
