[package]
name = "px-exchange-limitless"
description = "Limitless exchange implementation for OpenPX"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
px-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
rust_socketio = { workspace = true }
tokio-stream = { workspace = true }
hex = "0.4"

[dev-dependencies]
wiremock = "0.6"
