[package]
name = "px-exchange-opinion"
description = "Opinion exchange implementation for OpenPX"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["prediction-market", "trading", "opinion", "api"]
categories = ["api-bindings", "finance"]

[dependencies]
px-core = { workspace = true, features = ["http", "simd-json"] }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
