[package]
name = "px-exchange-predictfun"
description = "Predict.fun exchange implementation for OpenPX"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
px-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
ethers = { workspace = true }
hex = "0.4"

[dev-dependencies]
wiremock = "0.6"
anyhow = "1.0"
tokio = { workspace = true }
